# fastchroma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  benchmark.py  build.ps1  pyproject.toml
.github/workflows/: wheels.yml
python/fastchroma/: __init__.py
src/: bindings.cpp  cqt_internal.hpp  cuda_backend.cu  fastchroma.cpp  fastchroma.hpp  fft_backend.hpp  metal_backend.mm
tests/: test_fastchroma.py  test_gpu_backend.py  test_metal_backend.py  test_torch_io.py
